=== 0.0.0 ===
2008-01-18  Pascal Volk  <neverseen@users.sourceforge.net>

	* create_tables.pgsql: Removed unneeded sequences 'alias_id' and
	 'relocated_id'.
	 Removed unneeded column 'id' from table 'alias' and 'relocated'.

2008-01-15  Pascal Volk  <neverseen@users.sourceforge.net>

	* create_tables.pgsql: Redesign of table layout, create separate tables for
	maildir-folder and transport. Also assign transport to users not to domains

2008-01-11  Pascal Volk  <neverseen@users.sourceforge.net>

	* vmm (usage): Fixed a syntax error.

2008-01-09  Pascal Volk  <neverseen@users.sourceforge.net>

	* install.sh: Also install docs

	* VirtualMailManager/Account.py:
	* VirtualMailManager/Alias.py:
	* VirtualMailManager/Config.py:
	* VirtualMailManager/Domain.py:
	* VirtualMailManager/Exceptions.py:
	* VirtualMailManager/VirtualMailManager.py:
	* setup.py:
	* vmm: 	Included global version number.

	* VirtualMailManager/constants/VERSION.py: Added to repository.

2008-01-09  Pascal Volk  <neverseen@users.sourceforge.net>

	* VirtualMailManager/Account.py:
	* VirtualMailManager/Alias.py:
	* VirtualMailManager/Domain.py:
	* VirtualMailManager/VirtualMailManager.py:
	* vmm: Replaced email with e-mail.
	Corrected opening/closing quotation marks («word» -> »word«).

	* VirtualMailManager/VirtualMailManager.py: Renamed
	VirtualMailManager.__chkEmailadress to
	VirtualMailManager.__chkEmailAddress.

	* ChangeLog: Added to repository.

=== 0.3.1 ===
2008-01-08  Pascal Volk  <neverseen@users.sourceforge.net>

	* vmm (getVMM): Fixed names names of excepted errors.

	* VirtualMailManager/VirtualMailManager.py (VirtualMailManager.__init__):
	activated check for missing sections/options

	* vmm-0.3.1.tar.bz2: It's really bzip2 compressed. ;-)
