@@ -1,6 +1,6 @@
 #!/usr/bin/env python
 # -*- coding: UTF-8 -*-
-# opyright 2007-2008 VEB IT
+# Copyright 2007-2008 VEB IT
 # See COPYING for distribution information.
 # $Id$
 
