@@ -1,6 +1,6 @@
 #!/usr/bin/env python
 # -*- coding: UTF-8 -*-
-# opyright 2007-2008 VEB IT
+# Copyright 2007-2008 VEB IT
 # See COPYING for distribution information.
 # $Id$
 
@@ -27,9 +27,13 @@ INVALID_SECTION = 39
 LOCALPART_INVALID = 40
 LOCALPART_TOO_LONG = 41
 MAILDIR_PERM_MISMATCH = 42
-NOT_EXECUTABLE = 43
-NO_SUCH_ACCOUNT = 44
-NO_SUCH_ALIAS = 45
-NO_SUCH_BINARY = 46
-NO_SUCH_DIRECTORY = 47
-NO_SUCH_DOMAIN = 48
+MAILLOCATION_INIT = 43
+NOT_EXECUTABLE = 44
+NO_SUCH_ACCOUNT = 45
+NO_SUCH_ALIAS = 46
+NO_SUCH_BINARY = 47
+NO_SUCH_DIRECTORY = 48
+NO_SUCH_DOMAIN = 49
+TRANSPORT_INIT = 50
+UNKNOWN_MAILLOCATION_ID = 51
+UNKNOWN_TRANSPORT_ID = 52
